[Software-52] modify main color and font

--- a/software-capstone-fe/src/App.css
+++ b/software-capstone-fe/src/App.css
@@ -9,7 +9,12 @@ body,
   vertical-align: baseline;
   line-height: 1;
 
-  font-family: 'Itim', cursive;
+  font-family: Alata,'Itim', cursive;
+}
+
+:root {
+  --mainColor: #5196A5;
+  --secondaryColor: #2F4561;
 }
 
 
