--- a/software-capstone-fe/src/pages/Create/AddTest.module.css
+++ b/software-capstone-fe/src/pages/Create/AddTest.module.css
@@ -24,6 +24,7 @@
 .questionHeader {
     height: '40px';
 
+    font-size: 16px;
     background-color: #000;
     color: #FFF;
 
@@ -97,7 +98,4 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-}
-
-.title {
 }
