--- a/software-capstone-fe/src/pages/Create/AddTest.module.css
+++ b/software-capstone-fe/src/pages/Create/AddTest.module.css
@@ -99,3 +99,12 @@
     align-items: center;
     align-content: center;
 }
+
+.shortAnswer {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: flex-start;
+
+    padding: 0.75rem 0.5rem;
+}
