[Software-52] finish component

--- a/software-capstone-fe/src/pages/Create/AddTest.module.css
+++ b/software-capstone-fe/src/pages/Create/AddTest.module.css
@@ -108,3 +108,9 @@
 
     padding: 0.75rem 0.5rem;
 }
+
+.ip-title:focus {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
+}
