--- a/software-capstone-fe/src/components/QuestionType/MultipleChoice/index.module.css
+++ b/software-capstone-fe/src/components/QuestionType/MultipleChoice/index.module.css
@@ -57,12 +57,12 @@
 .select {
     height: 30px;
     width: 120px;
-    margin-right: 2rem;
+    margin-right: 1em;
 }
 
 .paragraph {
     font-size: 16px;
-    width: 70%;
+    width: 75%;
     padding-top: 0.25rem;
 }
 
@@ -81,4 +81,10 @@
 .input:focus {
     border-bottom: 1px solid #000;
     box-shadow: 0 0 0 2px rgba(255,255,255);
+}
+
+.ip-title:focus {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
 }
