--- a/software-capstone-fe/src/components/Section/SectionOne/index.module.css
+++ b/software-capstone-fe/src/components/Section/SectionOne/index.module.css
@@ -1,11 +1,16 @@
 .paragraph {
     font-size: 16px;
     width: 70%;
+    font-family: 'Alata';
 }
 
 .paragraph.full {
     width: 100%;
 }
 
-.title {
+
+.ip-title:focus {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
 }
