--- a/software-capstone-fe/src/App.css
+++ b/software-capstone-fe/src/App.css
@@ -15,8 +15,25 @@ body,
 :root {
   --mainColor: #5196A5;
   --secondaryColor: #2F4561;
+  --mainGrayColor: #F5F5F5;
+  --sencondaryGrayColor: #D9D9D9;
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #D9D9D9; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #9F9F9F; 
+}
 
 
 /* HTML5 display-role reset for older browsers */
