--- a/software-capstone-fe/src/pages/Create/AddTest.module.css
+++ b/software-capstone-fe/src/pages/Create/AddTest.module.css
@@ -1,17 +1,19 @@
 
 .column {
     margin: 0;
-    height: 93vh;
-    max-height: 93vh;
+    height: calc(100% - 80px);
+    max-height: calc(100% - 80px);
     overflow-y: auto;
+
+    box-sizing: border-box;
 }
 
 .column.left {
-    border-right: 2px solid #9F9F9F;
+    /* border-right: 2px solid #9F9F9F; */
 }
 
 .column.right {
-    background-color: #F5F5F5;
+    background-color: var(--mainGrayColor);
     width: 100%;
     max-width: 100%;
 }
@@ -136,4 +138,25 @@
 .container {
     box-sizing: border-box;
     padding: 0.5rem;
+}
+
+.question-item {
+    height: 50px;
+    width: 120px;
+    min-width: 120px;
+    padding: 0.5rem;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+
+
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px 2px #D9D9D9;
+
+    margin-left: 1rem;
+
+    cursor: pointer;
 }
