[Software-64] basic feature

--- a/software-capstone-fe/src/App.css
+++ b/software-capstone-fe/src/App.css
@@ -9,7 +9,7 @@ body,
   vertical-align: baseline;
   line-height: 1;
 
-  font-family: Alata,'Itim', cursive;
+  font-family: 'Alata','Itim', cursive;
 }
 
 :root {
