--- a/software-capstone-fe/src/components/QuestionTypeHeader/index.module.css
+++ b/software-capstone-fe/src/components/QuestionTypeHeader/index.module.css
@@ -12,6 +12,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    box-shadow: 2px 2px 2px 2px var(--mainGrayColor);
 }
 
 
