--- a/software-capstone-fe/src/pages/Create/AddTest.module.css
+++ b/software-capstone-fe/src/pages/Create/AddTest.module.css
@@ -1,4 +1,3 @@
-
 .column {
     margin: 0;
     /* height: calc(100% - 80px);
@@ -6,10 +5,6 @@
     overflow-y: auto;
 
     box-sizing: border-box;
-}
-
-.column.left {
-    /* border-right: 2px solid #9F9F9F; */
 }
 
 .column.right {
@@ -25,153 +20,18 @@
     font-size: 16px;
 }
 
-
-
-
-.question {
-    padding: 0.75rem 0.5rem;
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-
+.type-options {
     width: 100%;
     max-width: 100%;
-    background-color: #fff;
-}
+    overflow-x: auto;
 
-.number {
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
 
-    background-color: #D9D9D9;
-    color: #000;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 19px;
-    font-weight: bold;
-
-    margin-right: 0.5rem;
-}
-
-.select {
-    height: 30px;
-    width: 120px;
-    margin-right: 2rem;
-}
-
-.paragraph {
-    font-size: 16px;
-    width: 70%;
-}
-
-.paragraph.full {
-    width: 100%;
-}
-
-.input {
-    outline: none;
-    border: none;
-    border-bottom: 1px solid #000;
-    border-radius: 0;
-}
-
-.input:focus {
-    border-bottom: 1px solid #000;
-    box-shadow: 0 0 0 2px rgba(255,255,255);
-}
-
-.upload {
-    height: 150px;
-    width: 300px;
-
-    display: 'flex';
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-
-.shortAnswer {
-    display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
-    align-content: flex-start;
-
-    padding: 0.75rem 0.5rem;
-}
-
-.ip-title:focus {
-    border: none;
-    outline: none;
-    border-bottom: 1px solid black;
-}
-
-.paragraph {
-    font-size: 16px;
-    font-family: 'Alata';
-}
-
-.paragraph.important {
-    font-weight: bold;
-    font-size: 16px;
-    color: red;
-
-}
-
-.paragraph.limit {
-    font-weight: bold;
-    font-size: 16px;
-    color: black;
-}
-
-.container {
-    box-sizing: border-box;
-    padding: 0.5rem;
-}
-
-.question-item {
-    height: 50px;
-    width: 120px;
-    min-width: 120px;
-    padding: 0.5rem;
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-around;
     align-items: center;
 
-
-    border-radius: 10px;
-    box-shadow: 1px 1px 2px 2px #D9D9D9;
-
-    margin-left: 1rem;
-
-    cursor: pointer;
-}
-
-.questionHeader {
-    height: '40px';
-    box-sizing: border-box;
-
-    font-size: 16px;
-    background-color: #000;
-    color: #FFF;
-
-    padding: 1.25rem 0.5rem;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.number-input {
-    height: 35px;
-    width: 50px;
+    background-color: #FFF;
 }
