--- a/software-capstone-fe/src/App.css
+++ b/software-capstone-fe/src/App.css
@@ -15,6 +15,7 @@ body,
 :root {
   --mainColor: #5196A5;
   --secondaryColor: #2F4561;
+  --tertiaryColor: #6ABFD2;
   --mainGrayColor: #F5F5F5;
   --sencondaryGrayColor: #D9D9D9;
 }
