modify css for multiple choice component

--- a/software-capstone-fe/src/App.css
+++ b/software-capstone-fe/src/App.css
@@ -17,7 +17,7 @@ body,
   --secondaryColor: #2F4561;
   --tertiaryColor: #6ABFD2;
   --mainGrayColor: #F5F5F5;
-  --sencondaryGrayColor: #D9D9D9;
+  --secondaryGrayColor: #D9D9D9;
 }
 
 ::-webkit-scrollbar {
