--- a/software-capstone-fe/src/pages/PostTest/PostTest.module.css
+++ b/software-capstone-fe/src/pages/PostTest/PostTest.module.css
@@ -55,3 +55,10 @@
     bottom: 0;
     left: 0;
 }
+
+.shadow {
+    /* border-top: 1px solid #202020; */
+    -webkit-box-shadow: 0px -4px 2px 1px  #D9D9D9;
+    -moz-box-shadow: 0px -4px 2px 1px #D9D9D9;
+    box-shadow: 0px -4px 2px 1px #D9D9D9;
+}
